--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Matthew Belesiu's personal proxy server for FEC 3005 - Review service 3004 - Related Items service 3003 - Display Service 3001 - Question Service",
   "main": "server/server.js",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
